--- a/UsuariosGit/app/build.gradle
+++ b/UsuariosGit/app/build.gradle
@@ -33,6 +33,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
     implementation 'com.squareup.picasso:picasso:2.4.0'
+    implementation 'com.mikhaellopez:circularimageview:3.2.0'
+    implementation 'de.hdodenhof:circleimageview:3.0.0'
 
 
 }
